Fix horizontal scrollbar

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -96,12 +96,22 @@
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
-  opacity: 0;
+  display: none;
   width: 260px;
   color: var(--immersive-font);
   transition: all 0.5s;
+  animation: fade-in 0.5s;
 }
 
 .main .slide-text {
-  opacity: 1;
+  display: block;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
